<resources>
    <string name="app_name">Student Application</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_txt">Welcome Back</string>
    <string name="sign_in">Sign in to your account</string>
    <string name="login">Login</string>
    <string name="account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="create_acc">Create Account</string>
    <string name="setup_txt">Set up your admin account</string>
    <string name="check_acc">Already have an account?</string>
    <string name="manager">Student Manager</string>
    <string name="splash_txt">Manage students with ease</string>
    <string name="add_stud">Add Student</string>
    <string name="photo_txt">Tap photo to change</string>
    <string name="save_stud">Save Student</string>
    <string name="title">Attendance</string>
    <string name="date">Date:</string>
    <string name="change">Change</string>
    <string name="present_txt">Present: 0</string>
    <string name="absent_txt">Absent: 0</string>
    <string name="edit_title">Edit Student</string>
    <string name="update_stud">Update Student</string>
    <string name="greeting">Hello Admin 👋</string>
    <string name="txt">Students</string>
    <string name="dashboard">Dashboard</string>
    <string name="profile_txt">Profile</string>
    <string name="dash_overview">Dashboard Overview</string>
    <string name="total_stud">Total Students</string>
    <string name="latest_stud">Latest Student Added</string>
    <string name="no_stud">No students yet</string>
    <string name="skill">Skills</string>
    <string name="app_info">App Info</string>
    <string name="logout">Logout</string>
    <string name="attendance_report">Attendance Report</string>
    <string name="attendance_txt">Attendance</string>
    <string name="present">Present</string>
    <string name="absent">Absent</string>
    <string name="att_history">Attendance History</string>
    <string name="stud_profile">Student Profile</string>
    <string name="info">Detailed Information</string>
    <string name="name_txt">Name</string>
    <string name="email_txt">Email</string>
    <string name="course_txt">Course</string>
    <string name="phone_txt">Phone</string>
    <string name="edit_txt">Edit</string>
    <string name="delete_txt">Delete</string>
    <string name="view_report">📋  View Attendance Report</string>
    <string name="aToz_txt">Name A-Z</string>
    <string name="old_stud">Oldest First</string>
    <string name="new_stud">Newest First</string>
    <string name="all_chip">All</string>
    <string name="view">View</string>
    <string name="home_txt">Home</string>
    <string name="export_file">Export</string>
    <string name="stud_detail">Student Detail</string>
</resources>