<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeFragment"
        android:icon="@android:drawable/ic_menu_view"
        android:title="@string/home_txt"/>

    <item
        android:id="@+id/studentsFragment"
        android:icon="@android:drawable/ic_menu_agenda"
        android:title="@string/txt"/>

    <item
        android:id="@+id/addStudentFragment"
        android:icon="@android:drawable/ic_input_add"
        android:title="@string/add_stud"/>

    <item
        android:id="@+id/attendanceFragment"
        android:icon="@android:drawable/ic_menu_my_calendar"
        android:title="@string/attendance_txt"
        />

    <item
        android:id="@+id/profileFragment"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:title="@string/profile_txt"/>


</menu>